assign5/y.output
Terminals which are not used

   STRUCT
   TYPEDEF
   UNION
   HASH


State 114 conflicts: 1 shift/reduce
State 280 conflicts: 1 shift/reduce
State 322 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 constant: INT_CONSTANT
    2         | FLOAT_CONSTANT
    3         | ENU_CONSTANT
    4         | CHAR_CONSTANT

    5 primary_expression: IDENTIFIER
    6                   | constant
    7                   | STRING_LITERAL
    8                   | OPENROUND expression CLOSEROUND

    9 postfix_expression: primary_expression
   10                   | postfix_expression OPENSQUARE expression CLOSESQUARE
   11                   | postfix_expression OPENROUND CLOSEROUND
   12                   | postfix_expression OPENROUND argument_expression_list CLOSEROUND
   13                   | postfix_expression DOT IDENTIFIER
   14                   | postfix_expression POINTER IDENTIFIER
   15                   | postfix_expression INCREMENT
   16                   | postfix_expression DECREMENT
   17                   | OPENROUND type_name CLOSEROUND OPENCURLY initializer_list CLOSECURLY
   18                   | OPENROUND type_name CLOSEROUND OPENCURLY initializer_list COMMA CLOSECURLY

   19 argument_expression_list: assignment_expression
   20                         | argument_expression_list COMMA assignment_expression

   21 unary_expression: postfix_expression
   22                 | INCREMENT unary_expression
   23                 | DECREMENT unary_expression
   24                 | unary_operator cast_expression
   25                 | SIZEOF unary_expression
   26                 | SIZEOF OPENROUND type_name CLOSEROUND

   27 unary_operator: AND
   28               | MULTIPLY
   29               | PLUS
   30               | MINUS
   31               | NOT
   32               | EXCLAMATION

   33 cast_expression: unary_expression
   34                | OPENROUND type_name CLOSEROUND cast_expression

   35 multiplicative_expression: cast_expression
   36                          | multiplicative_expression MULTIPLY cast_expression
   37                          | multiplicative_expression DIVIDE cast_expression
   38                          | multiplicative_expression PERCENTAGE cast_expression

   39 additive_expression: multiplicative_expression
   40                    | additive_expression PLUS multiplicative_expression
   41                    | additive_expression MINUS multiplicative_expression

   42 shift_expression: additive_expression
   43                 | shift_expression LEFTSHIFT additive_expression
   44                 | shift_expression RIGHTSHIFT additive_expression

   45 relational_expression: shift_expression
   46                      | relational_expression LESSTHAN shift_expression
   47                      | relational_expression GREATERTHAN shift_expression
   48                      | relational_expression LESSTHANEQUAL shift_expression
   49                      | relational_expression GREATERTHANEQUAL shift_expression

   50 equality_expression: relational_expression
   51                    | equality_expression EQUALEQUAL relational_expression
   52                    | equality_expression NOTEQUAL relational_expression

   53 AND_expression: equality_expression
   54               | AND_expression AND equality_expression

   55 exclusive_OR_expression: AND_expression
   56                        | exclusive_OR_expression XOR AND_expression

   57 inclusive_OR_expression: exclusive_OR_expression
   58                        | inclusive_OR_expression '|' exclusive_OR_expression

   59 logical_and_expression: inclusive_OR_expression
   60                       | logical_and_expression AND inclusive_OR_expression

   61 logical_or_expression: logical_and_expression
   62                      | logical_or_expression OR logical_and_expression

   63 conditional_expression: logical_or_expression
   64                       | logical_or_expression QUESTIONMARK expression COLON conditional_expression

   65 assignment_expression: conditional_expression
   66                      | unary_expression assignment_operator assignment_expression

   67 assignment_operator: EQUAL
   68                    | MULTIPLYASSIGN
   69                    | DIVIDEASSIGN
   70                    | MODASSIGN
   71                    | ADDASSIGN
   72                    | SUBASSIGN
   73                    | LEFTSHIFTASSIGN
   74                    | RIGHTSHIFTASSIGN
   75                    | ANDASSIGN
   76                    | XORASSIGN
   77                    | ORASSIGN

   78 expression: assignment_expression
   79           | expression COMMA assignment_expression

   80 constant_expression: conditional_expression

   81 declaration: declaration_specifiers SEMICOLON
   82            | declaration_specifiers init_declarator_list SEMICOLON

   83 declaration_specifiers: storage_class_specifier
   84                       | storage_class_specifier declaration_specifiers
   85                       | type_specifier
   86                       | type_specifier declaration_specifiers
   87                       | type_qualifier
   88                       | type_qualifier declaration_specifiers
   89                       | function_specifier
   90                       | function_specifier declaration_specifiers

   91 init_declarator_list: init_declarator
   92                     | init_declarator_list COMMA init_declarator

   93 init_declarator: declarator
   94                | declarator EQUAL initializer

   95 storage_class_specifier: EXTERN
   96                        | STATIC
   97                        | AUTO
   98                        | REGISTER

   99 type_specifier: VOID
  100               | CHAR
  101               | SHORT
  102               | INT
  103               | LONG
  104               | FLOAT
  105               | DOUBLE
  106               | SIGNED
  107               | UNSIGNED
  108               | BOOL
  109               | COMPLEX
  110               | IMAGINARY
  111               | enum_specifier

  112 specifier_qualifier_list: type_specifier specifier_qualifier_list
  113                         | type_specifier
  114                         | type_qualifier specifier_qualifier_list
  115                         | type_qualifier

  116 enum_specifier: ENUM OPENCURLY enumerator_list CLOSECURLY
  117               | ENUM IDENTIFIER OPENCURLY enumerator_list CLOSECURLY
  118               | ENUM OPENCURLY enumerator_list COMMA CLOSECURLY
  119               | ENUM IDENTIFIER OPENCURLY enumerator_list COMMA CLOSECURLY
  120               | ENUM IDENTIFIER

  121 enumerator_list: enumerator
  122                | enumerator_list COMMA enumerator

  123 enumerator: IDENTIFIER
  124           | IDENTIFIER EQUAL constant_expression

  125 type_qualifier: CONST
  126               | VOLATILE
  127               | RESTRICT

  128 function_specifier: INLINE

  129 declarator: pointer direct_declarator
  130           | direct_declarator

  131 direct_declarator: IDENTIFIER
  132                  | OPENROUND declarator CLOSEROUND
  133                  | direct_declarator OPENSQUARE type_qualifier_list_opt assignment_expression_opt CLOSESQUARE
  134                  | direct_declarator OPENSQUARE STATIC type_qualifier_list_opt assignment_expression CLOSESQUARE
  135                  | direct_declarator OPENSQUARE type_qualifier_list_opt MULTIPLY CLOSESQUARE
  136                  | direct_declarator OPENROUND parameter_type_list CLOSEROUND
  137                  | direct_declarator OPENROUND identifier_list CLOSEROUND
  138                  | direct_declarator OPENROUND CLOSEROUND

  139 type_qualifier_list_opt: type_qualifier_list
  140                        | /* empty */

  141 assignment_expression_opt: assignment_expression
  142                          | /* empty */

  143 pointer: MULTIPLY
  144        | MULTIPLY type_qualifier_list
  145        | MULTIPLY pointer
  146        | MULTIPLY type_qualifier_list pointer

  147 type_qualifier_list: type_qualifier
  148                    | type_qualifier_list type_qualifier

  149 parameter_type_list: parameter_list
  150                    | parameter_list COMMA ELLIPSIS

  151 parameter_list: parameter_declaration
  152               | parameter_list COMMA parameter_declaration

  153 parameter_declaration: declaration_specifiers declarator
  154                      | declaration_specifiers

  155 identifier_list: IDENTIFIER
  156                | identifier_list COMMA IDENTIFIER

  157 type_name: specifier_qualifier_list

  158 initializer: assignment_expression
  159            | OPENCURLY initializer_list CLOSECURLY
  160            | OPENCURLY initializer_list COMMA CLOSECURLY

  161 initializer_list: initializer
  162                 | designation initializer
  163                 | initializer_list COMMA initializer
  164                 | initializer_list COMMA designation initializer

  165 designation: designator_list EQUAL

  166 designator_list: designator
  167                | designator_list designator

  168 designator: OPENSQUARE constant_expression CLOSESQUARE
  169           | DOT IDENTIFIER

  170 statement: labeled_statement
  171          | compound_statement
  172          | expression_statement
  173          | selection_statement
  174          | iteration_statement
  175          | jump_statement

  176 labeled_statement: IDENTIFIER COLON statement
  177                  | CASE constant_expression COLON statement
  178                  | DEFAULT COLON statement

  179 compound_statement: OPENCURLY CLOSECURLY
  180                   | OPENCURLY block_item_list CLOSECURLY

  181 block_item_list: block_item
  182                | block_item_list block_item

  183 block_item: declaration
  184           | statement

  185 expression_statement: SEMICOLON
  186                     | expression SEMICOLON

  187 selection_statement: IF OPENROUND expression CLOSEROUND statement
  188                    | IF OPENROUND expression CLOSEROUND statement ELSE statement
  189                    | SWITCH OPENROUND expression CLOSEROUND statement

  190 iteration_statement: WHILE OPENROUND expression CLOSEROUND statement
  191                    | DO statement WHILE OPENROUND expression CLOSEROUND SEMICOLON
  192                    | FOR OPENROUND expression_statement expression_statement CLOSEROUND statement
  193                    | FOR OPENROUND expression_statement expression_statement expression CLOSEROUND statement

  194 jump_statement: GOTO IDENTIFIER SEMICOLON
  195               | CONTINUE SEMICOLON
  196               | BREAK SEMICOLON
  197               | RETURN SEMICOLON
  198               | RETURN expression SEMICOLON

  199 translation_unit: external_declaration
  200                 | translation_unit external_declaration

  201 external_declaration: function_definition
  202                     | declaration

  203 function_definition: declaration_specifiers declarator declaration_list compound_statement
  204                    | declaration_specifiers declarator compound_statement
  205                    | declarator declaration_list compound_statement
  206                    | declarator compound_statement

  207 declaration_list: declaration
  208                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'|' (124) 58
error (256)
AUTO (258) 97
ENUM (259) 116 117 118 119 120
RESTRICT (260) 127
UNSIGNED (261) 107
BREAK (262) 196
EXTERN (263) 95
RETURN (264) 197 198
VOID (265) 99
CASE (266) 177
FLOAT (267) 104
SHORT (268) 101
VOLATILE (269) 126
CHAR (270) 100
FOR (271) 192 193
SIGNED (272) 106
WHILE (273) 190 191
CONST (274) 125
GOTO (275) 194
SIZEOF (276) 25 26
BOOL (277) 108
CONTINUE (278) 195
IF (279) 187 188
STATIC (280) 96 134
COMPLEX (281) 109
DEFAULT (282) 178
INLINE (283) 128
STRUCT (284)
IMAGINARY (285) 110
DO (286) 191
INT (287) 102
SWITCH (288) 189
DOUBLE (289) 105
LONG (290) 103
TYPEDEF (291)
ELSE (292) 188
REGISTER (293) 98
UNION (294)
MODASSIGN (295) 70
RIGHTSHIFTASSIGN (296) 74
SUBASSIGN (297) 72
MULTIPLYASSIGN (298) 68
INCREMENT (299) 15 22
DIVIDEASSIGN (300) 69
ADDASSIGN (301) 71
ANDASSIGN (302) 75
XORASSIGN (303) 76
RIGHTSHIFT (304) 44
LEFTSHIFT (305) 43
NOTEQUAL (306) 52
EQUALEQUAL (307) 51
DECREMENT (308) 16 23
POINTER (309) 14
ORASSIGN (310) 77
LESSTHANEQUAL (311) 48
GREATERTHANEQUAL (312) 49
OR (313) 62
LEFTSHIFTASSIGN (314) 73
ELLIPSIS (315) 150
PLUS (316) 29 40
AND (317) 27 54 60
MULTIPLY (318) 28 36 135 143 144 145 146
MINUS (319) 30 41
NOT (320) 31
DIVIDE (321) 37
PERCENTAGE (322) 38
GREATERTHAN (323) 47
LESSTHAN (324) 46
EQUAL (325) 67 94 124 165
OPENSQUARE (326) 10 133 134 135 168
CLOSESQUARE (327) 10 133 134 135 168
OPENROUND (328) 8 11 12 17 18 26 34 132 136 137 138 187 188 189 190
    191 192 193
CLOSEROUND (329) 8 11 12 17 18 26 34 132 136 137 138 187 188 189 190
    191 192 193
OPENCURLY (330) 17 18 116 117 118 119 159 160 179 180
CLOSECURLY (331) 17 18 116 117 118 119 159 160 179 180
DOT (332) 13 169
EXCLAMATION (333) 32
COMMA (334) 18 20 79 92 118 119 122 150 152 156 160 163 164
HASH (335)
XOR (336) 56
QUESTIONMARK (337) 64
COLON (338) 64 176 177 178
SEMICOLON (339) 81 82 185 186 191 194 195 196 197 198
INT_CONSTANT (340) 1
FLOAT_CONSTANT (341) 2
ENU_CONSTANT (342) 3
CHAR_CONSTANT (343) 4
IDENTIFIER (344) 5 13 14 117 119 120 123 124 131 155 156 169 176 194
STRING_LITERAL (345) 7


Nonterminals, with rules where they appear

$accept (92)
    on left: 0
constant (93)
    on left: 1 2 3 4, on right: 6
primary_expression (94)
    on left: 5 6 7 8, on right: 9
postfix_expression (95)
    on left: 9 10 11 12 13 14 15 16 17 18, on right: 10 11 12 13 14
    15 16 21
argument_expression_list (96)
    on left: 19 20, on right: 12 20
unary_expression (97)
    on left: 21 22 23 24 25 26, on right: 22 23 25 33 66
unary_operator (98)
    on left: 27 28 29 30 31 32, on right: 24
cast_expression (99)
    on left: 33 34, on right: 24 34 35 36 37 38
multiplicative_expression (100)
    on left: 35 36 37 38, on right: 36 37 38 39 40 41
additive_expression (101)
    on left: 39 40 41, on right: 40 41 42 43 44
shift_expression (102)
    on left: 42 43 44, on right: 43 44 45 46 47 48 49
relational_expression (103)
    on left: 45 46 47 48 49, on right: 46 47 48 49 50 51 52
equality_expression (104)
    on left: 50 51 52, on right: 51 52 53 54
AND_expression (105)
    on left: 53 54, on right: 54 55 56
exclusive_OR_expression (106)
    on left: 55 56, on right: 56 57 58
inclusive_OR_expression (107)
    on left: 57 58, on right: 58 59 60
logical_and_expression (108)
    on left: 59 60, on right: 60 61 62
logical_or_expression (109)
    on left: 61 62, on right: 62 63 64
conditional_expression (110)
    on left: 63 64, on right: 64 65 80
assignment_expression (111)
    on left: 65 66, on right: 19 20 66 78 79 134 141 158
assignment_operator (112)
    on left: 67 68 69 70 71 72 73 74 75 76 77, on right: 66
expression (113)
    on left: 78 79, on right: 8 10 64 79 186 187 188 189 190 191 193
    198
constant_expression (114)
    on left: 80, on right: 124 168 177
declaration (115)
    on left: 81 82, on right: 183 202 207 208
declaration_specifiers (116)
    on left: 83 84 85 86 87 88 89 90, on right: 81 82 84 86 88 90 153
    154 203 204
init_declarator_list (117)
    on left: 91 92, on right: 82 92
init_declarator (118)
    on left: 93 94, on right: 91 92
storage_class_specifier (119)
    on left: 95 96 97 98, on right: 83 84
type_specifier (120)
    on left: 99 100 101 102 103 104 105 106 107 108 109 110 111,
    on right: 85 86 112 113
specifier_qualifier_list (121)
    on left: 112 113 114 115, on right: 112 114 157
enum_specifier (122)
    on left: 116 117 118 119 120, on right: 111
enumerator_list (123)
    on left: 121 122, on right: 116 117 118 119 122
enumerator (124)
    on left: 123 124, on right: 121 122
type_qualifier (125)
    on left: 125 126 127, on right: 87 88 114 115 147 148
function_specifier (126)
    on left: 128, on right: 89 90
declarator (127)
    on left: 129 130, on right: 93 94 132 153 203 204 205 206
direct_declarator (128)
    on left: 131 132 133 134 135 136 137 138, on right: 129 130 133
    134 135 136 137 138
type_qualifier_list_opt (129)
    on left: 139 140, on right: 133 134 135
assignment_expression_opt (130)
    on left: 141 142, on right: 133
pointer (131)
    on left: 143 144 145 146, on right: 129 145 146
type_qualifier_list (132)
    on left: 147 148, on right: 139 144 146 148
parameter_type_list (133)
    on left: 149 150, on right: 136
parameter_list (134)
    on left: 151 152, on right: 149 150 152
parameter_declaration (135)
    on left: 153 154, on right: 151 152
identifier_list (136)
    on left: 155 156, on right: 137 156
type_name (137)
    on left: 157, on right: 17 18 26 34
initializer (138)
    on left: 158 159 160, on right: 94 161 162 163 164
initializer_list (139)
    on left: 161 162 163 164, on right: 17 18 159 160 163 164
designation (140)
    on left: 165, on right: 162 164
designator_list (141)
    on left: 166 167, on right: 165 167
designator (142)
    on left: 168 169, on right: 166 167
statement (143)
    on left: 170 171 172 173 174 175, on right: 176 177 178 184 187
    188 189 190 191 192 193
labeled_statement (144)
    on left: 176 177 178, on right: 170
compound_statement (145)
    on left: 179 180, on right: 171 203 204 205 206
block_item_list (146)
    on left: 181 182, on right: 180 182
block_item (147)
    on left: 183 184, on right: 181 182
expression_statement (148)
    on left: 185 186, on right: 172 192 193
selection_statement (149)
    on left: 187 188 189, on right: 173
iteration_statement (150)
    on left: 190 191 192 193, on right: 174
jump_statement (151)
    on left: 194 195 196 197 198, on right: 175
translation_unit (152)
    on left: 199 200, on right: 0 200
external_declaration (153)
    on left: 201 202, on right: 199 200
function_definition (154)
    on left: 203 204 205 206, on right: 201
declaration_list (155)
    on left: 207 208, on right: 203 205 208


state 0

    0 $accept: . translation_unit $end

    AUTO        shift, and go to state 1
    ENUM        shift, and go to state 2
    RESTRICT    shift, and go to state 3
    UNSIGNED    shift, and go to state 4
    EXTERN      shift, and go to state 5
    VOID        shift, and go to state 6
    FLOAT       shift, and go to state 7
    SHORT       shift, and go to state 8
    VOLATILE    shift, and go to state 9
    CHAR        shift, and go to state 10
    SIGNED      shift, and go to state 11
    CONST       shift, and go to state 12
    BOOL        shift, and go to state 13
    STATIC      shift, and go to state 14
    COMPLEX     shift, and go to state 15
    INLINE      shift, and go to state 16
    IMAGINARY   shift, and go to state 17
    INT         shift, and go to state 18
    DOUBLE      shift, and go to state 19
    LONG        shift, and go to state 20
    REGISTER    shift, and go to state 21
    MULTIPLY    shift, and go to state 22
    OPENROUND   shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    declaration              go to state 25
    declaration_specifiers   go to state 26
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31
    declarator               go to state 32
    direct_declarator        go to state 33
    pointer                  go to state 34
    translation_unit         go to state 35
    external_declaration     go to state 36
    function_definition      go to state 37


state 1

   97 storage_class_specifier: AUTO .

    $default  reduce using rule 97 (storage_class_specifier)


state 2

  116 enum_specifier: ENUM . OPENCURLY enumerator_list CLOSECURLY
  117               | ENUM . IDENTIFIER OPENCURLY enumerator_list CLOSECURLY
  118               | ENUM . OPENCURLY enumerator_list COMMA CLOSECURLY
  119               | ENUM . IDENTIFIER OPENCURLY enumerator_list COMMA CLOSECURLY
  120               | ENUM . IDENTIFIER

    OPENCURLY   shift, and go to state 38
    IDENTIFIER  shift, and go to state 39


state 3

  127 type_qualifier: RESTRICT .

    $default  reduce using rule 127 (type_qualifier)


state 4

  107 type_specifier: UNSIGNED .

    $default  reduce using rule 107 (type_specifier)


state 5

   95 storage_class_specifier: EXTERN .

    $default  reduce using rule 95 (storage_class_specifier)


state 6

   99 type_specifier: VOID .

    $default  reduce using rule 99 (type_specifier)


state 7

  104 type_specifier: FLOAT .

    $default  reduce using rule 104 (type_specifier)


state 8

  101 type_specifier: SHORT .

    $default  reduce using rule 101 (type_specifier)


state 9

  126 type_qualifier: VOLATILE .

    $default  reduce using rule 126 (type_qualifier)


state 10

  100 type_specifier: CHAR .

    $default  reduce using rule 100 (type_specifier)


state 11

  106 type_specifier: SIGNED .

    $default  reduce using rule 106 (type_specifier)


state 12

  125 type_qualifier: CONST .

    $default  reduce using rule 125 (type_qualifier)


state 13

  108 type_specifier: BOOL .

    $default  reduce using rule 108 (type_specifier)


state 14

   96 storage_class_specifier: STATIC .

    $default  reduce using rule 96 (storage_class_specifier)


state 15

  109 type_specifier: COMPLEX .

    $default  reduce using rule 109 (type_specifier)


state 16

  128 function_specifier: INLINE .

    $default  reduce using rule 128 (function_specifier)


state 17

  110 type_specifier: IMAGINARY .

    $default  reduce using rule 110 (type_specifier)


state 18

  102 type_specifier: INT .

    $default  reduce using rule 102 (type_specifier)


state 19

  105 type_specifier: DOUBLE .

    $default  reduce using rule 105 (type_specifier)


state 20

  103 type_specifier: LONG .

    $default  reduce using rule 103 (type_specifier)


state 21

   98 storage_class_specifier: REGISTER .

    $default  reduce using rule 98 (storage_class_specifier)


state 22

  143 pointer: MULTIPLY .
  144        | MULTIPLY . type_qualifier_list
  145        | MULTIPLY . pointer
  146        | MULTIPLY . type_qualifier_list pointer

    RESTRICT  shift, and go to state 3
    VOLATILE  shift, and go to state 9
    CONST     shift, and go to state 12
    MULTIPLY  shift, and go to state 22

    $default  reduce using rule 143 (pointer)

    type_qualifier       go to state 40
    pointer              go to state 41
    type_qualifier_list  go to state 42


state 23

  132 direct_declarator: OPENROUND . declarator CLOSEROUND

    MULTIPLY    shift, and go to state 22
    OPENROUND   shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    declarator         go to state 43
    direct_declarator  go to state 33
    pointer            go to state 34


state 24

  131 direct_declarator: IDENTIFIER .

    $default  reduce using rule 131 (direct_declarator)


state 25

  202 external_declaration: declaration .

    $default  reduce using rule 202 (external_declaration)


state 26

   81 declaration: declaration_specifiers . SEMICOLON
   82            | declaration_specifiers . init_declarator_list SEMICOLON
  203 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  204                    | declaration_specifiers . declarator compound_statement

    MULTIPLY    shift, and go to state 22
    OPENROUND   shift, and go to state 23
    SEMICOLON   shift, and go to state 44
    IDENTIFIER  shift, and go to state 24

    init_declarator_list  go to state 45
    init_declarator       go to state 46
    declarator            go to state 47
    direct_declarator     go to state 33
    pointer               go to state 34


state 27

   83 declaration_specifiers: storage_class_specifier .
   84                       | storage_class_specifier . declaration_specifiers

    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID       shift, and go to state 6
    FLOAT      shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR       shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL       shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT        shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    $default  reduce using rule 83 (declaration_specifiers)

    declaration_specifiers   go to state 48
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


state 28

   85 declaration_specifiers: type_specifier .
   86                       | type_specifier . declaration_specifiers

    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID       shift, and go to state 6
    FLOAT      shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR       shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL       shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT        shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    $default  reduce using rule 85 (declaration_specifiers)

    declaration_specifiers   go to state 49
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


state 29

  111 type_specifier: enum_specifier .

    $default  reduce using rule 111 (type_specifier)


state 30

   87 declaration_specifiers: type_qualifier .
   88                       | type_qualifier . declaration_specifiers

    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID       shift, and go to state 6
    FLOAT      shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR       shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL       shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT        shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    $default  reduce using rule 87 (declaration_specifiers)

    declaration_specifiers   go to state 50
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


state 31

   89 declaration_specifiers: function_specifier .
   90                       | function_specifier . declaration_specifiers

    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID       shift, and go to state 6
    FLOAT      shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR       shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL       shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT        shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    $default  reduce using rule 89 (declaration_specifiers)

    declaration_specifiers   go to state 51
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


state 32

  205 function_definition: declarator . declaration_list compound_statement
  206                    | declarator . compound_statement

    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID       shift, and go to state 6
    FLOAT      shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR       shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL       shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT        shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21
    OPENCURLY  shift, and go to state 52

    declaration              go to state 53
    declaration_specifiers   go to state 54
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31
    compound_statement       go to state 55
    declaration_list         go to state 56


state 33

  130 declarator: direct_declarator .
  133 direct_declarator: direct_declarator . OPENSQUARE type_qualifier_list_opt assignment_expression_opt CLOSESQUARE
  134                  | direct_declarator . OPENSQUARE STATIC type_qualifier_list_opt assignment_expression CLOSESQUARE
  135                  | direct_declarator . OPENSQUARE type_qualifier_list_opt MULTIPLY CLOSESQUARE
  136                  | direct_declarator . OPENROUND parameter_type_list CLOSEROUND
  137                  | direct_declarator . OPENROUND identifier_list CLOSEROUND
  138                  | direct_declarator . OPENROUND CLOSEROUND

    OPENSQUARE  shift, and go to state 57
    OPENROUND   shift, and go to state 58

    $default  reduce using rule 130 (declarator)


state 34

  129 declarator: pointer . direct_declarator

    OPENROUND   shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    direct_declarator  go to state 59


state 35

    0 $accept: translation_unit . $end
  200 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 60
    AUTO        shift, and go to state 1
    ENUM        shift, and go to state 2
    RESTRICT    shift, and go to state 3
    UNSIGNED    shift, and go to state 4
    EXTERN      shift, and go to state 5
    VOID        shift, and go to state 6
    FLOAT       shift, and go to state 7
    SHORT       shift, and go to state 8
    VOLATILE    shift, and go to state 9
    CHAR        shift, and go to state 10
    SIGNED      shift, and go to state 11
    CONST       shift, and go to state 12
    BOOL        shift, and go to state 13
    STATIC      shift, and go to state 14
    COMPLEX     shift, and go to state 15
    INLINE      shift, and go to state 16
    IMAGINARY   shift, and go to state 17
    INT         shift, and go to state 18
    DOUBLE      shift, and go to state 19
    LONG        shift, and go to state 20
    REGISTER    shift, and go to state 21
    MULTIPLY    shift, and go to state 22
    OPENROUND   shift, and go to state 23
    IDENTIFIER  shift, and go to state 24

    declaration              go to state 25
    declaration_specifiers   go to state 26
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31
    declarator               go to state 32
    direct_declarator        go to state 33
    pointer                  go to state 34
    external_declaration     go to state 61
    function_definition      go to state 37


state 36

  199 translation_unit: external_declaration .

    $default  reduce using rule 199 (translation_unit)


state 37

  201 external_declaration: function_definition .

    $default  reduce using rule 201 (external_declaration)


state 38

  116 enum_specifier: ENUM OPENCURLY . enumerator_list CLOSECURLY
  118               | ENUM OPENCURLY . enumerator_list COMMA CLOSECURLY

    IDENTIFIER  shift, and go to state 62

    enumerator_list  go to state 63
    enumerator       go to state 64


state 39

  117 enum_specifier: ENUM IDENTIFIER . OPENCURLY enumerator_list CLOSECURLY
  119               | ENUM IDENTIFIER . OPENCURLY enumerator_list COMMA CLOSECURLY
  120               | ENUM IDENTIFIER .

    OPENCURLY  shift, and go to state 65

    $default  reduce using rule 120 (enum_specifier)


state 40

  147 type_qualifier_list: type_qualifier .

    $default  reduce using rule 147 (type_qualifier_list)


state 41

  145 pointer: MULTIPLY pointer .

    $default  reduce using rule 145 (pointer)


state 42

  144 pointer: MULTIPLY type_qualifier_list .
  146        | MULTIPLY type_qualifier_list . pointer
  148 type_qualifier_list: type_qualifier_list . type_qualifier

    RESTRICT  shift, and go to state 3
    VOLATILE  shift, and go to state 9
    CONST     shift, and go to state 12
    MULTIPLY  shift, and go to state 22

    $default  reduce using rule 144 (pointer)

    type_qualifier  go to state 66
    pointer         go to state 67


state 43

  132 direct_declarator: OPENROUND declarator . CLOSEROUND

    CLOSEROUND  shift, and go to state 68


state 44

   81 declaration: declaration_specifiers SEMICOLON .

    $default  reduce using rule 81 (declaration)


state 45

   82 declaration: declaration_specifiers init_declarator_list . SEMICOLON
   92 init_declarator_list: init_declarator_list . COMMA init_declarator

    COMMA      shift, and go to state 69
    SEMICOLON  shift, and go to state 70


state 46

   91 init_declarator_list: init_declarator .

    $default  reduce using rule 91 (init_declarator_list)


state 47

   93 init_declarator: declarator .
   94                | declarator . EQUAL initializer
  203 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  204                    | declaration_specifiers declarator . compound_statement

    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID       shift, and go to state 6
    FLOAT      shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR       shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL       shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT        shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21
    EQUAL      shift, and go to state 71
    OPENCURLY  shift, and go to state 52

    $default  reduce using rule 93 (init_declarator)
